--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       <title>Practice</title>
 </head>
 <body>
-      <h1>Practice</h1>
+      <h1>Practice Session</h1>
       <p>This is for practice.</p>
+      <p>This is yet another sentence.</p>
 </body>
 </html>
